# eSantri-Web

./: .gitignore  App.tsx  AppContext.tsx  README.md  db.ts  edit_tahfizh.py  firebase-applet-config.json  firebase-blueprint.json  firebase.ts  firebaseApp.ts  firebaseAuth.ts  firebaseCore.ts  firebaseErrors.ts  firebaseLite.ts  firebaseStorage.ts  firestore.rules  index.css  index.html  index.tsx  manifest.json  metadata.json  package-lock.json  package.json  sw.js  tailwind.config.js  tsconfig.json  types.ts  version.ts  vite.config.js  vite.config.ts
.claude/: CLAUDE.md
.github/: pull_request_template.md
components/: Absensi.tsx  AdminSyncDashboard.tsx  Akademik.tsx  App.tsx  Asrama.tsx  AuditLogView.tsx  BK.tsx  BackupReminderModal.tsx  BukuKas.tsx  BukuTamu.tsx  ConfirmModal.tsx  Dashboard.tsx  DataMaster.tsx  Finance.tsx  Kalender.tsx  Kesehatan.tsx  Koperasi.tsx  Kurikulum.tsx  Login.tsx  PSB.tsx  Perpustakaan.tsx  PortalManagement.tsx  Rapor.tsx  Reports.tsx  SantriList.tsx  Sarpras.tsx  Settings.tsx  Sidebar.tsx  SuratMenyurat.tsx  Tahfizh.tsx  Tentang.tsx  UpdateNotification.tsx  WelcomeModal.tsx  WhatsAppCenter.tsx
contexts/: AuthContext.tsx  FinanceContext.tsx  FirebaseContext.tsx  SantriContext.tsx  SettingsContext.tsx  UIContext.tsx
data/: content.tsx  faq.tsx  features.ts  mock.ts  panduan.tsx  quran.ts
docs/: client-side-development-audit.md  datamaster-user-guide.md  development-milestones.md  milestone-task-breakdown.md  p1-firebase-boundary-verification.md  portal-gas-setup.md  portal-gas-template.gs  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+187 files in other folders)
