
[package]
name = "esantri"
version = "1.0.0"
description = "eSantri Desktop App"
authors = ["Admin Pesantren"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open", "dialog", "fs-all", "window-maximize"] }

[features]
# Fitur ini digunakan untuk build produksi atau saat devPath menunjuk ke file system
custom-protocol = ["tauri/custom-protocol"]
